--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -31,5 +31,5 @@ jobs:
           CONAN_BUILD_TYPES: ${{ matrix.compiler.buildType }}
           CONAN_SYSREQUIRES_MODE: enabled
         run: |
-          export CONAN_${{ matrix.compiler.name }}_VERSIONS="${{ matrix.compiler.version }}"
+          SET CONAN_${{ matrix.compiler.name }}_VERSIONS="${{ matrix.compiler.version }}"
           python build.py
