--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -2,18 +2,16 @@ on: [push, pull_request]
 
 jobs:
   splitByBuildTypesTrue:
-    runs-on: windows-2019
+    runs-on: ${{ matrix.config.os }}
     strategy:
       fail-fast: false
       matrix:
-        compiler:
-        - { name: "VISUAL", version: "14", buildType: "Debug"   }
-        - { name: "VISUAL", version: "14", buildType: "Release" }
-        - { name: "VISUAL", version: "15", buildType: "Debug"   }
-        - { name: "VISUAL", version: "15", buildType: "Release" }
-        - { name: "VISUAL", version: "16", buildType: "Debug"   }
-        - { name: "VISUAL", version: "16", buildType: "Release" }
-    name: ${{ matrix.compiler.name }} ${{ matrix.compiler.version }} ${{ matrix.compiler.buildType }}
+        config:
+          - { os: windows-2017, name: "VISUAL", version: "15", buildType: "Debug"   }
+          - { os: windows-2017, name: "VISUAL", version: "15", buildType: "Release" }
+          - { os: windows-2019, name: "VISUAL", version: "16", buildType: "Debug"   }
+          - { os: windows-2019, name: "VISUAL", version: "16", buildType: "Release" }
+    name: ${{ matrix.config.name }} ${{ matrix.config.version }} ${{ matrix.config.buildType }}
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-python@v2
@@ -25,11 +23,7 @@ jobs:
           conan user
       - name: Run
         env:
-          CONAN_USE_DOCKER: 1
-          CONAN_LOGIN_USERNAME: ${{ secrets.CONAN_LOGIN_USERNAME }}
-          CONAN_PASSWORD: ${{ secrets.CONAN_PASSWORD }}
-          CONAN_BUILD_TYPES: ${{ matrix.compiler.buildType }}
-          CONAN_SYSREQUIRES_MODE: enabled
+          CONAN_BUILD_TYPES: ${{ matrix.config.buildType }}
         run: |
-          SET CONAN_${{ matrix.compiler.name }}_VERSIONS="${{ matrix.compiler.version }}"
+          SET CONAN_${{ matrix.config.name }}_VERSIONS="${{ matrix.config.version }}"
           python build.py
