--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -26,5 +26,7 @@ jobs:
           CONAN_BUILD_TYPES: ${{ matrix.config.buildType }}
           CONAN_VISUAL_VERSIONS: ${{ matrix.config.version }}
           CONAN_CMAKE_GENERATOR: Ninja
+          CC: cl.exe
+          CXX: cl.exe
         run: |
           python build.py
