--- a/appveyor.yml
+++ b/appveyor.yml
@@ -13,7 +13,7 @@ install:
   - set PATH=%PYTHON_HOME%;%PYTHON_HOME%/Scripts/;%PATH%
   - pip install conan --upgrade
   - pip install bincrafters_package_tools
-  - conan user # It creates the conan data directory
+  - conan user
 
 build_script:
   - python build.py
